[project]
name = "nodestream"
version = "0.14.17"
description = "A Fast, Declarative ETL for Graph Databases."
authors = [{ name = "Zach Probst", email = "Zach_Probst@intuit.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "GPL-3.0-only"
keywords = [
    "etl",
    "neo4j",
    "declarative",
    "data",
    "kafka",
    "ingest",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Topic :: Database",
]
dependencies = [
    "pyyaml~=6.0",
    "jmespath~=1.0",
    "cleo~=2.0",
    "python-json-logger~=2.0",
    "boto3>=1.34.127,<2",
    "confluent-kafka~=2.5",
    "Jinja2>=3,<4",
    "pandas>=2,<3",
    "pyarrow>=17.0.0,<19.0.0",
    "schema>=0.7,<0.8",
    "cookiecutter~=2.0",
    "httpx>=0.27,<0.28",
    "psutil~=6.0",
    "uvloop>=0.17.0,<=0.21.0 ; sys_platform == 'darwin'",
    "uvloop>=0.17.0,<=0.21.0 ; sys_platform == 'linux'",
    "prometheus-client>=0.21.1",
]

[project.optional-dependencies]
prometheus = ["prometheus-client>=0.21.1,<0.22"]
validation = [
    "genson>=1.3.0,<2",
    "jsonschema>=4.23.0,<5",
]

[project.urls]
Homepage = "https://github.com/nodestream-proj/nodestream"
Repository = "https://github.com/nodestream-proj/nodestream"
Documentation = "https://nodestream-proj.github.io/nodestream"

[project.scripts]
nodestream = "nodestream.cli.application:run"

[project.entry-points."nodestream.plugins"]
argument_resolvers = "nodestream.pipeline.argument_resolvers"
file_formats = "nodestream.pipeline.extractors.files"
interpretations = "nodestream.interpreting.interpretations"
normalizers = "nodestream.pipeline.normalizers"
value_providers = "nodestream.pipeline.value_providers"
record_formats = "nodestream.pipeline.extractors.streams"
stream_connectors = "nodestream.pipeline.extractors.streams"
commands = "nodestream.cli.commands"
audits = "nodestream.project.audits"
schema_printers = "nodestream.schema.printers"
databases = "nodestream.databases.null"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "black>=25.1.0,<26",
    "pyhamcrest>=2.1.0,<3",
    "isort>=6.0.1,<7",
    "pytest-cov>=6.1.1,<7",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-mock>=3.14.1,<4",
    "freezegun>=1.2.2,<2",
    "moto[s3, dynamodb]>=5,<6",
    "ruff>=0.11.12,<0.12",
    "pytest-snapshot>=0.9.0,<0.10",
    "pytest-httpx>=0.30.0,<0.31",
]

[tool.isort]
profile = "black"

[tool.hatch.build.targets.sdist]
include = ["nodestream"]

[tool.hatch.build.targets.wheel]
include = ["nodestream"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: marks the test as an integration test (deselect with '-m \"not integration\"')",
    "e2e: marks the test as an end-to-end test (deselect with '-m \"not e2e\"')",
]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true
allow-star-arg-any = true
