[project]
name = "nodestream-plugin-neo4j"
version = "0.13.0"
description = "An official nodestream plugin for Neo4j Integration."
requires-python = ">=3.10"
dependencies = [
    "nodestream>=0.13.0",
    "neo4j>=5.16",
    "cymple>=0.11",
]
authors = [
    { name = "Zach Probst", email = "Zach_Probst@intuit.com"},
    { name = "Chad Cloes", email = "Chad_Cloes@intuit.com"},
    { name = "Angelo Santos", email = "Angelo_Santos@intuit.com"},
    { name = "Grant Hoffman"},
    { name = "Yason Khaburzaniya"},
]
license = {text = "Apache 2.0"}
keywords = ["etl", "neo4j", "declarative", "data", "kafka", "ingest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Topic :: Database"
]

[project.urls]
Homepage = "https://nodestream-proj.github.io/docs/"
Documentation = "https://nodestream-proj.github.io/docs/docs/"
Repository = "https://github.com/nodestream-proj/nodestream.git"
Issues = "https://github.com/nodestream-proj/nodestream/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.entry-points."nodestream.plugins"]
"databases" = "nodestream_plugin_neo4j"

[tool.uv.sources]
nodestream = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = ["nodestream_plugin_neo4j/tests/*"]